# website-crawler

./: next.config.js  package-lock.json  package.json  pyproject.toml  replit.nix  start-fastapi.sh  start-nextjs.sh  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(dashboard)/: layout.tsx
app/(dashboard)/captures/: page.tsx
app/(dashboard)/dashboard/: page.tsx
app/(dashboard)/tags/: page.tsx
app/components/ui/: button.tsx
app/styles/: globals.css
attached_assets/: Pasted--WebCapture-Pro-PRD-1-WebCapture-Pro-PC--1743073807554.txt
attached_assets/docs/: capture-workflow.md  component-architecture.md  database-erd.md  screen-management.md  setup.md
client/src/: App.tsx
client/src/components/: CaptureForm.tsx  CaptureResults.tsx  Layout.tsx  Sidebar.tsx  TopBar.tsx
client/src/hooks/: useCapture.ts  useCaptures.ts  useTags.ts  useWebsites.ts
client/src/pages/: CaptureDetails.tsx  Dashboard.tsx  TagManager.tsx
fastapi_backend/: main.py  requirements.txt
fastapi_backend/app/: __init__.py  main.py
fastapi_backend/app/api/: deps.py
fastapi_backend/app/core/: config.py
fastapi_backend/app/crud/: base.py  user.py
fastapi_backend/app/db/: base.py  session.py
fastapi_backend/app/models/: __init__.py  capture.py  device_profile.py  page.py  screenshot.py  tag.py  user.py  website.py
fastapi_backend/app/schemas/: capture.py  device_profile.py  page.py  screenshot.py  tag.py  user.py  website.py
fastapi_backend/app/utils/: capture.py  url.py
server/: capture.ts  routes.ts  storage.ts
shared/: schema.ts
(+10 files in other folders)
