[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "passlib>=1.7.4",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.10.6",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.39",
    "uvicorn>=0.34.0",
    "pillow>=11.1.0",
    "python-slugify>=8.0.4",
    "playwright>=1.51.0",
    "email-validator>=2.2.0",
    "aiofiles>=24.1.0",
]
